updated gitignore and added graph_bfs template

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /.idea/SoftwareEngineeringKnowledgeBank.iml
 /.idea/vcs.xml
 /.idea/workspace.xml
+/.idea/Algorithms.iml
+/.idea/dictionaries/Aviral_Garg.xml
